Fix layout bug

--- a/project/application/static/css/site.css
+++ b/project/application/static/css/site.css
@@ -107,7 +107,6 @@ article dd {
     font: normal 20px 'Open Sans', sans-serif;
     padding: 5px;
     height: 50px;
-    float: left;
 }
 
 #lead dl {
